# todo_app_rs

./: .env  Cargo.toml  docker-compose.yml
api/: Cargo.toml
api/src/: lib.rs
api/src/entity/: mod.rs  prelude.rs  todo_table.rs  users.rs
entities/: Cargo.toml
entities/src/: lib.rs  prelude.rs  todo_table.rs
migration/src/: lib.rs  m20240411_193554_todo_table.rs  m20240412_122421_users.rs
src/: main.rs
